Added JavaDoc and refactored